[package]
name = "pcl-decoder"
description = "A point cloud decoder written in rust, compiled to wasm. To be used in rapyuta-robotics/amphion"
version = "0.1.5"
authors = ["Ashish Chaudhary <iamashishchaudhary@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]

[dependencies]
scroll = "0.7.0"
js-sys = "0.3.22"
wasm-bindgen = "0.2.45"
console_error_panic_hook = "0.1.6"
